--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-20
+    runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ./
