--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - run: npm run build
       - run: npm run export
       - run: touch out/.nojekyll
-#      - run: echo meetix.bht-media.de > out/CNAME
+#      - run: echo meetix.bht-meet.de > out/CNAME
 #        env:
 #            CI: true
 
